src/app/places/components/details-place/details-place.component.css
.details-place-container {
    margin: 80px 20px;
    margin-left: calc(20vw + 30px);
    width: calc(75vw - 60px);
    min-height: calc(100vh - 40px);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    padding: 80px;
    box-sizing: border-box;
    color: #ffffff;
    border-radius: 12px;
    background-color: #ffffff;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
}

.details-header {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.details-header .icon-style {
    position: absolute;
    left: 0;
    font-size: 30px;
    color: #000000;
    cursor: pointer;
}

.details-header h1 {
    font-size: 36px;
    font-weight: 700;
    color: #000000;
    margin: 0;
}


.banner-place,
.carousel-item {
    width: 100%;
    height: 40vh;
    background-color: #2a2a2a;
    position: relative;
    border-radius: 12px;
    overflow: hidden;
    transition: transform 0.5s ease;
}

.banner-place img,
.carousel-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.5s ease;
}

.banner-place img:hover,
.carousel-item img:hover {
    transform: scale(1.1);
}

.details-place-container {
    display: flex;
    justify-content: space-between;
    font-size: 18px;
    color: #ffc700;
    font-weight: bold;
    text-transform: uppercase;
    align-items: flex-start;
}

.icon-style {
    font-size: 24px;
    color: #000;
    cursor: pointer;
    display: inline-block;
}

.info-corta {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin: 10px 20px;
}

.types-stars {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    width: 100%;
    box-sizing: border-box;
}

.types {
    font-size: 1rem;
    color: #ffc700;
    white-space: nowrap;

}

.info-corta .types-stars .star-rating {
    display: flex;
    gap: 5px;
    justify-content: end;
}

.star {
    width: 24px;
    height: 24px;
    clip-path: polygon(50% 0%,
            61% 35%,
            98% 35%,
            68% 57%,
            79% 91%,
            50% 70%,
            21% 91%,
            32% 57%,
            2% 35%,
            39% 35%);
    background-color: #ffc700;
    border: 8px solid #000;
    border-radius: 5%;
    transition: transform 0.3s ease;
}

.star:hover {
    transform: scale(1.2);
    cursor: pointer;
}

.description {
    font-size: 1rem;
    color: #000;
    font-weight: 400;
}

.tags-container {
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
}

.tags-container span {
    background-color: #ffc700;
    color: #ffffff;
    padding: 8px 12px;
    border-radius: 12px;
    font-size: 0.9rem;
    transition: background-color 0.3s ease, transform 0.3s ease;
}

.tags-container span:hover {
    background-color: #ffffff;
    color: #ffc700;
    transform: scale(1.1);
}

.address {
    text-align: left;
    font-weight: 400;
    color: #000000;
}

.reviews-container {
    width: 100%;
    max-width: 1000px;
    margin: 20px auto;
    padding: 10px;
    font-family: Arial, sans-serif;
}

.reviews-container h2 {
    font-size: 24px;
    color: #000;
    margin-bottom: 20px;
}

.review {
    margin-bottom: 20px;
    border-bottom: 1px solid #ccc;
    padding-bottom: 10px;
}

.review-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
}

.username {
    font-size: 16px;
    font-weight: bold;
    color: #000;
}

.star-rating {
    display: flex;
    gap: 5px;
}

.star {
    width: 20px;
    height: 20px;
    clip-path: polygon(50% 0%,
            61% 35%,
            98% 35%,
            68% 57%,
            79% 91%,
            50% 70%,
            21% 91%,
            32% 57%,
            2% 35%,
            39% 35%);
    background-color: #ffc700;
    border: 1px solid #000;
}

.star.empty {
    background-color: #ccc;
}

.description hr {
    border: none;
    border-top: 1px solid #ccc;
    margin: 5px 0;
}


.btn {
    color: #ffffff;
    font-weight: bold;
    padding: 8px 16px;
    border: none;
    border-radius: 25px;
    cursor: pointer;
    transition: background 0.3s, transform 0.3s;
}

.btn:hover {
    background: #ffc700;
}

.btn-primary {
    background-color: #ffc700;
}

.btn-danger {
    background-color: #c82333;
}

.btn-primary:hover {
    background-color: #bb960f;
}

.btn-danger:hover {
    background-color: #eb3548;
}

.button-group {
    display: flex;
    gap: 50px;
    justify-content: center;
    width: 100%;
}

.modal-content {
    background-color: #333333;
    color: #ffffff;
    border-radius: 12px;
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
    overflow: hidden;
}

.modal-header {
    background-color: #FFEB55;
    color: #000000;
    border-bottom: none;
    padding: 15px;
    font-size: 1.2rem;
    font-weight: bold;
    text-transform: uppercase;
}

.modal-title .btn-delete {
    background-color: #ffffff;
    border: none;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    opacity: 1;
}

.modal-body {
    background: linear-gradient(135deg, #ffffff, #ffffff);
    color: #000000;
    padding: 20px;
    font-size: 1rem;
}

.modal-footer {
    background-color: #ffffff;
    padding: 15px;
    display: flex;
    justify-content: space-between;
}

.modal-footer .btn-danger {
    background-color: #c82333;
    width: 30vh;
}

.modal-footer .btn-danger:hover {
    background-color: #eb3548;
}

.modal-footer .btn-secondary {
    background-color: #e0b600;
    color: #ffffff;
    width: 30vh;
}

.modal-footer .btn-secondary:hover {
    background-color: #ffc700;
}

.modal-footer .btn-secondary-edit {
    background-color: #c82333;
    width: 30vh;
}

.modal-footer .btn-secondary-edit:hover {
    background-color: #eb3548;
}

.modal-footer .btn-primary-edit {
    background-color: #e0b600;
    color: #ffffff;
    width: 30vh;
}

.modal-footer .btn-primary-edit:hover {
    background-color: #ffc700;
}

.details-place-container,
.modal-content {
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
}

.modal-content {
    background-color: #e0b600;
    color: #000000;
}

.modal-content {
    background-color: #ffc700;
}

.details-place-container .info-corta span:hover {
    color: #ffc700;
    transition: color 0.3s;
}

.carousel {
    position: relative;
    width: 100%;
    max-width: 1000px;
    height: 60vh;
    margin: auto;
    border-radius: 10px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
    overflow: hidden;
    cursor: pointer;
}

.carousel-item {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.carousel-item .image-group {
    display: flex;
    gap: 10px;
    justify-content: center;
    align-items: center;
    height: 60vh;
}

.carousel-item .image-group img {
    width: 340px;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.banner-place {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.banner-place img {
    width: 100%;
    height: 80vh;
    object-fit: cover;
    border-radius: 10px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
}

.see-all-photos {
    position: absolute;
    bottom: 10px;
    right: 10px;
    background-color: rgba(0, 0, 0, 0.5);
    color: #fff;
    padding: 8px 16px;
    border-radius: 5px;
    cursor: pointer;
    font-weight: bold;
    text-align: center;
    font-size: 16px;
    border: 1px solid #fff;
    z-index: 10;
}

.photos-modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.9);
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.photos-modal .modal-content {
    position: relative;
    width: 100%;
    max-width: 1000px;
    background: #fff;
    padding: 20px;
    border-radius: 8px;
    overflow-y: auto;
    max-height: 80vh;
}

.photos-modal h2 {
    z-index: 1000;
    align-items: center;
    background-color: #ffffff;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
    justify-content: space-between;
    position: fixed;
    text-align: center;
    font-size: 24px;
    margin-bottom: 10px;
    width: 70%;
    padding: 20px;
    margin: 5px 2px;
}

.photos-modal .close-modal {
    position: fixed;
    top: 15vh;
    right: 35vh;
    z-index: 2000;
    background: none;
    border: none;
    color: #000;
    font-size: 30px;
    cursor: pointer;
}


.photos-modal .photos-grid {
    margin: 15vh;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
}

.photos-modal .photos-grid img {
    width: 30vh;
    height: 30vh;
    object-fit: cover;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

@media (max-width: 600px) {
    .types-stars {
        flex-direction: column;
        align-items: flex-start;
    }

    .star-rating {
        margin-top: 5px;
    }
}

/* Redimension de la imagenes en la modal "actualizar" */
.existing-image-preview {
    width: 85px;
    height: 85px;
    object-fit: cover;
    margin: 5px;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}

.image-container {
    display: flex;
    flex-wrap: wrap;
    gap: 19px;
    justify-content: center;
}

